--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Logs
+services
+swap
+sandbox
+components
 modules
+ollama_runner
 logs
 *.log
 npm-debug.log*
@@ -13,7 +17,6 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
