ai/ai.sh upgraded to Nexus

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ai/nemodian_base"]
 	path = ai/nemodian_base
 	url = git@github.com:Loopshape/_NIX-SYSOP-AI-AGENT-by-Aris-Arjuna-Noorsanto.git
+[submodule "core/loader"]
+	path = core/loader
+	url = https://github.com/Loopshape/loader
